Putting draft content into tables

--- a/src/pages/updates/work-in-progress/index.mdx
+++ b/src/pages/updates/work-in-progress/index.mdx
@@ -12,19 +12,21 @@ in progress.
 
 </PageDescription>
 
-## Components
+This work in progress is not supported, and is not approved for production use.
+The Carbon team gratefully accepts feedback or comment.
 
-### Tree view
+| Tools and resources               |                                                    |
+| --------------------------------- | -------------------------------------------------- |
+| [Carbon Sketch kit for mobile](/) | Intro sentence about the Carbon mobile sketch kit. |
+| [Data visualization guidance](/)  | Intro about data viz file.                         |
 
-Intro sentence about the tree view.
+| Components and patterns                                                                                                |                                                                                                                 |
+| ---------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------- |
+| [Tree view component](https://deploy-preview-6008--carbon-components-react.netlify.app/?path=/story/treeview--default) | Intro sentence about the tree view. [Github issue](https://github.com/carbon-design-system/carbon/issues/5180). |
+| [Text toolbar](/)                                                                                                      | Intro sentence about the text toolbar.                                                                          |
 
-- [Storybook preview](https://deploy-preview-6008--carbon-components-react.netlify.app/?path=/story/treeview--default)
-- [Github pull request](https://github.com/carbon-design-system/carbon/issues/5180)
-
-## Design resources
-
-### Carbon mobile Sketch kit
-
-Intro sentence about the Carbon mobile sketch kit.
-
-- [Link](https://)
+| Carbon website concepts       |                                       |
+| ----------------------------- | ------------------------------------- |
+| [Information architecture](/) | Info about IA exploration.            |
+| [Home page concepts](/)       | Info about home page concepts.        |
+| [Community index](/)          | Info about community component index. |
