docs: remove content about experimental

--- a/src/pages/get-started/about-carbon.mdx
+++ b/src/pages/get-started/about-carbon.mdx
@@ -63,7 +63,7 @@ desires, Carbon is laser-focused on real people.
 and component of Carbon was designed from the ground up to work elegantly
 together to ensure consistent, cohesive user experiences.
 
-## Governance
+## How we work
 
 The Carbon team encourages adoption through guidance and training, community
 development, maintenance, and support. The system is primarily maintained by a
@@ -111,25 +111,6 @@ primary maintainers:
 **Design patterns are harvested from products built with Carbon.** These become
 part of the design system. Teams can use these well-defined patterns in their
 work and contribute patterns back to the system.
-
-### Contribution acceptance
-
-We bring experimental components and patterns into the design library as quickly
-as possible with little barrier to entry.
-
-**Experimental status means duplicate patterns may exist.** Accompanying
-guidance may be minimal. Maintainers are not yet identified or committed.
-Inclusion in the shared library raises awareness and acts as a live audit so
-people can benefit from the collaboration.
-
-**Beta status means there are few or no duplicate patterns.** Guidance on the
-site is reasonably complete and useful. Maintainers are identified and committed
-to ongoing support. The intention is to go to production with only minor changes
-based on user feedback.
-
-**Production status means there are no duplicate patterns.** These offer
-high-quality guidance. Design symbols and code components are available.
-Maintainers know to monitor support channels for their patterns.
 
 ## Certificate of Originality
 
