--- a/src/pages/guidelines/pictograms/usage.mdx
+++ b/src/pages/guidelines/pictograms/usage.mdx
@@ -168,7 +168,9 @@ on 1/4 of the scaled grid size. The padding can be increased by increments of
 
 <ArtDirection>
 
-![](images/17_Clearance_1-mobile.svg) ![](images/17_Clearance_1.svg)
+![](images/17_Clearance_1-mobile.svg)
+
+![](images/17_Clearance_1.svg)
 
 </ArtDirection>
 
@@ -176,7 +178,9 @@ on 1/4 of the scaled grid size. The padding can be increased by increments of
 
 <ArtDirection>
 
-![](images/17_Clearance_2-mobile.svg) ![](images/17_Clearance_2.svg)
+![](images/17_Clearance_2-mobile.svg)
+
+![](images/17_Clearance_2.svg)
 
 </ArtDirection>
 
@@ -184,7 +188,9 @@ on 1/4 of the scaled grid size. The padding can be increased by increments of
 
 <ArtDirection>
 
-![](images/17_Clearance_3-mobile.svg) ![](images/17_Clearance_3.svg)
+![](images/17_Clearance_3-mobile.svg)
+
+![](images/17_Clearance_3.svg)
 
 </ArtDirection>
 
