Updated titles and layout of table content

--- a/src/pages/updates/work-in-progress/index.mdx
+++ b/src/pages/updates/work-in-progress/index.mdx
@@ -15,18 +15,24 @@ in progress.
 This work in progress is not supported, and is not approved for production use.
 The Carbon team gratefully accepts feedback or comment.
 
-| Tools and resources               |                                                    |
-| --------------------------------- | -------------------------------------------------- |
-| [Carbon Sketch kit for mobile](/) | Intro sentence about the Carbon mobile sketch kit. |
-| [Data visualization guidance](/)  | Intro about data viz file.                         |
+## Tools and resources
 
-| Components and patterns                                                                                                |                                                                                                                 |
-| ---------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------- |
-| [Tree view component](https://deploy-preview-6008--carbon-components-react.netlify.app/?path=/story/treeview--default) | Intro sentence about the tree view. [Github issue](https://github.com/carbon-design-system/carbon/issues/5180). |
-| [Text toolbar](/)                                                                                                      | Intro sentence about the text toolbar.                                                                          |
+| Concept                           | Description                                                                                                                                               |
+| --------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [Carbon Sketch kit for mobile](/) | This draft sketch kit takes the design principles of the IBM Design Language and Carbon Design System and applies them for mobile app design.             |
+| [Data visualization guidance](/)  | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a orci accumsan, venenatis nisi eu, pellentesque ex. Nunc odio risus, sagittis quis felis. |
 
-| Carbon website concepts       |                                       |
-| ----------------------------- | ------------------------------------- |
-| [Information architecture](/) | Info about IA exploration.            |
-| [Home page concepts](/)       | Info about home page concepts.        |
-| [Community index](/)          | Info about community component index. |
+## Components and patterns
+
+| Concept                                                                                                                | Description                                                                                                                                                                                     |
+| ---------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [Tree view component](https://deploy-preview-6008--carbon-components-react.netlify.app/?path=/story/treeview--default) | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a orci accumsan, venenatis nisi eu, pellentesque ex. [Github issue](https://github.com/carbon-design-system/carbon/issues/5180). |
+| [Text toolbar](/)                                                                                                      | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a orci accumsan, venenatis nisi eu, pellentesque ex. Nunc odio risus, sagittis quis felis.                                       |
+
+## Website design and content
+
+| Concept                       | Description                                                                                                                                               |
+| ----------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [Information architecture](/) | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a orci accumsan, venenatis nisi eu, pellentesque ex. Nunc odio risus, sagittis quis felis. |
+| [Home page concepts](/)       | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a orci accumsan, venenatis nisi eu, pellentesque ex. Nunc odio risus, sagittis quis felis. |
+| [Community index](/)          | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a orci accumsan, venenatis nisi eu, pellentesque ex. Nunc odio risus, sagittis quis felis. |
