Update step-1.mdx (#1457)
Just fixed the wrong comma on the example of the "ibm-header-item" pointing to route "/repos"

Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/src/pages/tutorial/angular/step-1.mdx
+++ b/src/pages/tutorial/angular/step-1.mdx
@@ -194,7 +194,7 @@ shortly. In `header.component.html` replace the code with:
 ```html path=src/app/header/header.component.html
 <ibm-header [route]="['/']" name="Carbon Tutorial Angular">
   <ibm-header-navigation ariaLabel="Carbon Tutorial Angular">
-    <ibm-header-item [route]="'[/repos']">Repositories</ibm-header-item>
+    <ibm-header-item [route]="['/repos']">Repositories</ibm-header-item>
   </ibm-header-navigation>
   <ibm-header-global>
     <ibm-header-action title="action">
