--- a/src/pages/community/component-index.mdx
+++ b/src/pages/community/component-index.mdx
@@ -1,8 +1,21 @@
 ---
 title: Component index
-description: Hello there
+description:
+  These components are developed and maintained by members of the IBM Carbon
+  community and are currently only accessible to IBMers. They may change over
+  time, and they may be incomplete or experimental. For support, please contact
+  the contributors listed on each page.
 ---
 
-import ComponentIndexPage from "../../components/ComponentIndexPage";
+import ComponentIndexPage from '../../components/ComponentIndexPage';
+
+<PageDescription>
+
+These components are developed and maintained by members of the IBM Carbon
+community and are currently only accessible to IBMers. They may change over
+time, and they may be incomplete or experimental. For support, please contact
+the contributors listed on each page.
+
+</PageDescription>
 
 <ComponentIndexPage />
