Changed the layout to use minicards

--- a/src/pages/guidelines/pictograms/usage.mdx
+++ b/src/pages/guidelines/pictograms/usage.mdx
@@ -168,9 +168,7 @@ on 1/4 of the scaled grid size. The padding can be increased by increments of
 
 <ArtDirection>
 
-![](images/17_Clearance_1-mobile.svg)
-
-![](images/17_Clearance_1.svg)
+![](images/17_Clearance_1-mobile.svg) ![](images/17_Clearance_1.svg)
 
 </ArtDirection>
 
@@ -178,9 +176,7 @@ on 1/4 of the scaled grid size. The padding can be increased by increments of
 
 <ArtDirection>
 
-![](images/17_Clearance_2-mobile.svg)
-
-![](images/17_Clearance_2.svg)
+![](images/17_Clearance_2-mobile.svg) ![](images/17_Clearance_2.svg)
 
 </ArtDirection>
 
@@ -188,9 +184,7 @@ on 1/4 of the scaled grid size. The padding can be increased by increments of
 
 <ArtDirection>
 
-![](images/17_Clearance_3-mobile.svg)
-
-![](images/17_Clearance_3.svg)
+![](images/17_Clearance_3-mobile.svg) ![](images/17_Clearance_3.svg)
 
 </ArtDirection>
 
