--- a/src/pages/updates/work-in-progress/index.mdx
+++ b/src/pages/updates/work-in-progress/index.mdx
@@ -12,27 +12,30 @@ in progress.
 
 </PageDescription>
 
-This work in progress is not supported, and is not approved for production use.
-The Carbon team gratefully accepts feedback or comment.
+This work in progress is not actively supported by the Carbon team, and is not
+approved for production use. We gratefully accept feedback or comment.
 
 ## Tools and resources
 
-| Concept                           | Description                                                                                                                                               |
-| --------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [Carbon Sketch kit for mobile](/) | This draft sketch kit takes the design principles of the IBM Design Language and Carbon Design System and applies them for mobile app design.             |
-| [Data visualization guidance](/)  | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a orci accumsan, venenatis nisi eu, pellentesque ex. Nunc odio risus, sagittis quis felis. |
+<CardGroup>
+  <MiniCard title="Carbon mobile sketch kit" href="/" actionIcon="download" />
+  <MiniCard title="Data visualization" href="/" actionIcon="download" />
+</CardGroup>
 
 ## Components and patterns
 
-| Concept                                                                                                                | Description                                                                                                                                                                                     |
-| ---------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [Tree view component](https://deploy-preview-6008--carbon-components-react.netlify.app/?path=/story/treeview--default) | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a orci accumsan, venenatis nisi eu, pellentesque ex. [Github issue](https://github.com/carbon-design-system/carbon/issues/5180). |
-| [Text toolbar](/)                                                                                                      | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a orci accumsan, venenatis nisi eu, pellentesque ex. Nunc odio risus, sagittis quis felis.                                       |
+<CardGroup>
+  <MiniCard
+    title="Tree view component"
+    href="https://deploy-preview-6008--carbon-components-react.netlify.app/?path=/story/treeview--default"
+  />
+  <MiniCard title="Text toolbar" href="/" />
+</CardGroup>
 
 ## Website design and content
 
-| Concept                       | Description                                                                                                                                               |
-| ----------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [Information architecture](/) | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a orci accumsan, venenatis nisi eu, pellentesque ex. Nunc odio risus, sagittis quis felis. |
-| [Home page concepts](/)       | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a orci accumsan, venenatis nisi eu, pellentesque ex. Nunc odio risus, sagittis quis felis. |
-| [Community index](/)          | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a orci accumsan, venenatis nisi eu, pellentesque ex. Nunc odio risus, sagittis quis felis. |
+<CardGroup>
+  <MiniCard title="Information architecture" href="/" />
+  <MiniCard title="Home page concepts" href="/" />
+  <MiniCard title="Community index" href="/" />
+</CardGroup>
