--- a/src/pages/components/form/usage.mdx
+++ b/src/pages/components/form/usage.mdx
@@ -290,7 +290,7 @@ characters."_
 ### Optional vs. required fields
 
 All fields in a form are assumed required, with optional fields being tagged as
-so.
+so. An instruction should precede the form stating either "All fields are required" or "All fields are required unless marked optional"
 
 <Row>
 <Column colLg={8}>
