Added introduction contex, and fixed h2s

--- a/src/pages/updates/work-in-progress/index.mdx
+++ b/src/pages/updates/work-in-progress/index.mdx
@@ -12,17 +12,33 @@ in progress.
 
 </PageDescription>
 
-This work in progress is not actively supported by the Carbon team, and is not
-approved for production use. We gratefully accept feedback or comment.
+<InlineNotification>
+  This work in progress is not actively supported by the Carbon team, and is not
+  approved for production use. We gratefully accept feedback or comment.
+</InlineNotification>
 
-## Tools and resources
+## Introduction
+
+The Carbon team is always exploring different ways to serve our users. We work
+in the open, and this page is here to give you early previews of what we're
+working on.
+
+That could mean making an unfinished Sketch kit available for download, linking
+to GitHub issues for proposed components and patterns, or presenting graphics
+files of concepts on how we might present content.
+
+Not everything here may make it into production, other pieces might become
+central pieces of the design system. It's an early opportunity for you to
+provide feedback and influence Carbon's direction.
+
+### Tools and resources
 
 <CardGroup>
   <MiniCard title="Carbon mobile sketch kit" href="/" actionIcon="download" />
   <MiniCard title="Data visualization" href="/" actionIcon="download" />
 </CardGroup>
 
-## Components and patterns
+### Components and patterns
 
 <CardGroup>
   <MiniCard
@@ -32,7 +48,7 @@ approved for production use. We gratefully accept feedback or comment.
   <MiniCard title="Text toolbar" href="/" />
 </CardGroup>
 
-## Website design and content
+### Website design and content
 
 <CardGroup>
   <MiniCard title="Information architecture" href="/" />
