Added a couple of actual links, for context

--- a/src/pages/updates/work-in-progress/index.mdx
+++ b/src/pages/updates/work-in-progress/index.mdx
@@ -51,7 +51,13 @@ provide feedback and influence Carbon's direction.
 ### Website design and content
 
 <CardGroup>
-  <MiniCard title="Information architecture" href="/" />
+  <MiniCard
+    title="Information architecture"
+    href="https://github.com/carbon-design-system/carbon-website/issues/1516"
+  />
   <MiniCard title="Home page concepts" href="/" />
-  <MiniCard title="Community index" href="/" />
+  <MiniCard
+    title="Community index"
+    href="https://carbon-website-git-fork-joshblack-feat-add-fuzzy-search-7ad4b3.carbon-design-system.vercel.app/community/component-index/"
+  />
 </CardGroup>
