Removed a preview that is already live

--- a/src/pages/updates/work-in-progress/index.mdx
+++ b/src/pages/updates/work-in-progress/index.mdx
@@ -43,9 +43,8 @@ provide feedback and influence Carbon's direction.
 <CardGroup>
   <MiniCard
     title="Tree view component"
-    href="https://deploy-preview-6008--carbon-components-react.netlify.app/?path=/story/treeview--default"
+    href="https://carbon-website-git-fork-designertyler-treeview03092020.carbon-design-system.now.sh/components/tree-view/usage"
   />
-  <MiniCard title="Text toolbar" href="/" />
 </CardGroup>
 
 ### Website design and content
