Added fathom tracking code to the wip links

--- a/src/pages/updates/work-in-progress/index.mdx
+++ b/src/pages/updates/work-in-progress/index.mdx
@@ -34,14 +34,25 @@ provide feedback and influence Carbon's direction.
 ### Tools and resources
 
 <CardGroup>
-  <MiniCard title="Carbon mobile sketch kit" href="/" actionIcon="download" />
-  <MiniCard title="Data visualization" href="/" actionIcon="download" />
+  <MiniCard
+    onClick={() => fathom('trackGoal', 'GC8C8OMU', 0)}
+    title="Carbon mobile sketch kit"
+    href="/"
+    actionIcon="download"
+  />
+  <MiniCard
+    onClick={() => fathom('trackGoal', 'GP38VQMY', 0)}
+    title="Data viz sticker sheet"
+    href="/"
+    actionIcon="download"
+  />
 </CardGroup>
 
 ### Components and patterns
 
 <CardGroup>
   <MiniCard
+    onClick={() => fathom('trackGoal', 'B3AN6GVA', 0)}
     title="Tree view component"
     href="https://carbon-website-git-fork-designertyler-treeview03092020.carbon-design-system.now.sh/components/tree-view/usage"
   />
@@ -51,11 +62,13 @@ provide feedback and influence Carbon's direction.
 
 <CardGroup>
   <MiniCard
+    onClick={() => fathom('trackGoal', 'C9ESE7PV', 0)}
     title="Information architecture"
     href="https://github.com/carbon-design-system/carbon-website/issues/1516"
   />
   <MiniCard title="Home page concepts" href="/" />
   <MiniCard
+    onClick={() => fathom('trackGoal', 'ZASURK2Q', 0)}
     title="Community index"
     href="https://carbon-website-git-fork-joshblack-feat-add-fuzzy-search-7ad4b3.carbon-design-system.vercel.app/community/component-index/"
   />
