Adding correct icons

--- a/src/pages/updates/work-in-progress/index.mdx
+++ b/src/pages/updates/work-in-progress/index.mdx
@@ -34,12 +34,12 @@ provide feedback and influence Carbon's direction.
 ### Tools and resources
 
 <CardGroup>
-  <MiniCard
-    onClick={() => fathom('trackGoal', 'GC8C8OMU', 0)}
-    title="Carbon mobile sketch kit"
-    href="/"
-    actionIcon="download"
-  />
+  <MiniCard onClick={() => fathom('trackGoal', 'GC8C8OMU', 0)} title="Carbon mobile sketch kit" href="/">
+
+
+![Sketch icon](/images/sketch-icon.png)
+
+  </MiniCard>
   <MiniCard
     onClick={() => fathom('trackGoal', 'GP38VQMY', 0)}
     title="Data viz sticker sheet"
@@ -61,12 +61,16 @@ provide feedback and influence Carbon's direction.
 ### Website design and content
 
 <CardGroup>
-  <MiniCard
-    onClick={() => fathom('trackGoal', 'C9ESE7PV', 0)}
-    title="Information architecture"
-    href="https://github.com/carbon-design-system/carbon-website/issues/1516"
+  <MiniCard onClick={() => fathom('trackGoal', 'C9ESE7PV', 0)} title="IA exploration" href="https://github.com/carbon-design-system/carbon-website/issues/1516">
+
+
+![GitHub icon](/images/github-icon.png)
+
+  </MiniCard>
+  <MiniCard 
+    title="Home page concepts" 
+    href="/" 
   />
-  <MiniCard title="Home page concepts" href="/" />
   <MiniCard
     onClick={() => fathom('trackGoal', 'ZASURK2Q', 0)}
     title="Community index"
