--- a/src/pages/components/UI-shell-header/usage.mdx
+++ b/src/pages/components/UI-shell-header/usage.mdx
@@ -203,3 +203,9 @@ left panel items, pushing them down accordingly.
 - Susan Farrell,
   [Utility Navigation: What It Is and How to Design It](https://www.nngroup.com/articles/utility-navigation/)
   (Nielsen Norman Group, 2015)
+
+## Feedback
+
+Help us improve this component by providing feedback, asking questions, and
+leaving any other comments on
+[GitHub](https://github.com/carbon-design-system/carbon-website/issues/new?assignees=&labels=feedback&template=feedback.md).
