--- a/src/pages/components/UI-shell-header/usage.mdx
+++ b/src/pages/components/UI-shell-header/usage.mdx
@@ -178,7 +178,7 @@ left panel items, pushing them down accordingly.
 ![An example of the header responding to different screen sizes.](images/responsive_header.png)
 
 </Column>
-<Row>
+</Row>
 
 ### States
 
