Updated with links

--- a/src/pages/updates/work-in-progress/index.mdx
+++ b/src/pages/updates/work-in-progress/index.mdx
@@ -34,16 +34,10 @@ provide feedback and influence Carbon's direction.
 ### Tools and resources
 
 <CardGroup>
-  <MiniCard onClick={() => fathom('trackGoal', 'GC8C8OMU', 0)} title="Carbon mobile sketch kit" href="/">
-
-
-![Sketch icon](/images/sketch-icon.png)
-
-  </MiniCard>
   <MiniCard
-    onClick={() => fathom('trackGoal', 'GP38VQMY', 0)}
-    title="Data viz sticker sheet"
-    href="/"
+    onClick={() => fathom('trackGoal', 'GC8C8OMU', 0)}
+    title="Carbon mobile sketch kit"
+    href="https://www.sketch.com/s/f7556588-235f-4bcb-8aeb-e2bc64ba4249"
     actionIcon="download"
   />
 </CardGroup>
@@ -61,19 +55,19 @@ provide feedback and influence Carbon's direction.
 ### Website design and content
 
 <CardGroup>
-  <MiniCard onClick={() => fathom('trackGoal', 'C9ESE7PV', 0)} title="IA exploration" href="https://github.com/carbon-design-system/carbon-website/issues/1516">
-
-
-![GitHub icon](/images/github-icon.png)
-
-  </MiniCard>
-  <MiniCard 
-    title="Home page concepts" 
-    href="/" 
+  <MiniCard
+    onClick={() => fathom('trackGoal', '1WVDJ6KO', 0)}
+    title="Community index"
+    href="https://www.carbondesignsystem.com/community/component-index/"
+  />
+  <MiniCard
+    onClick={() => fathom('trackGoal', 'C9ESE7PV', 0)}
+    title="IA exploration"
+    href="https://github.com/carbon-design-system/carbon-website/issues/1516"
   />
   <MiniCard
     onClick={() => fathom('trackGoal', 'ZASURK2Q', 0)}
-    title="Community index"
-    href="https://carbon-website-git-fork-joshblack-feat-add-fuzzy-search-7ad4b3.carbon-design-system.vercel.app/community/component-index/"
+    title="Activation concepts"
+    href="https://ibm.box.com/s/oz5fs63ozvymy2lgmm7jowiisvja6zg5"
   />
 </CardGroup>
