Fixed sketch link for homepage concepts

--- a/src/pages/updates/work-in-progress/index.mdx
+++ b/src/pages/updates/work-in-progress/index.mdx
@@ -68,6 +68,6 @@ provide feedback and influence Carbon's direction.
   <MiniCard
     onClick={() => fathom('trackGoal', 'ZASURK2Q', 0)}
     title="Activation concepts"
-    href="https://ibm.box.com/s/oz5fs63ozvymy2lgmm7jowiisvja6zg5"
+    href="https://ibm.box.com/shared/static/oz5fs63ozvymy2lgmm7jowiisvja6zg5.sketch"
   />
 </CardGroup>
